feat: build header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,48 @@
 </head>
 
 <body>
-  
+  <header class="header">
+    <div class="navbar">
+      <div class="navbar-brand">
+        <h3>BrandName</h3>
+      </div>
+      <!-- <div class="navbar-toggler"></div> -->
+      <div class="navbar-collapse">
+        <div class="navbar-nav">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#product">Product</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </div>
+        <div class="navbar-nav-login">
+          <div class="nav-item"><a href="#" class="btn-text">Login</a></div>
+          <div class="nav-item">
+            <button class="btn">
+              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg" alt="">
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-headline">
+          <h1 id="headline">Financial Assistance With True Purpose</h1>
+          <h4>
+            We know how large objects will act,<br>
+            but things on a small scale.
+          </h4>
+          <div class="cta">
+            <button class="btn btn-text btn-round">Get Quote Now</button>
+            <button class="btn btn-text btn-round btn-outline">Learn More</button>
+          </div>
+        </div>
+        <div class="col-photo">
+          <img src="assets/images/croods-user-interface.png" alt="">
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 
 </html>
