feat: build features section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="nav-item"><a href="#" class="btn-text">Login</a></div>
           <div class="nav-item">
             <button class="btn">
-              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg" alt="">
+              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg">
             </button>
           </div>
         </div>
@@ -41,16 +41,61 @@
             but things on a small scale.
           </h4>
           <div class="cta">
-            <button class="btn btn-text btn-round">Get Quote Now</button>
-            <button class="btn btn-text btn-round btn-outline">Learn More</button>
+            <button class="btn btn-round">Get Quote Now</button>
+            <button class="btn btn-round btn-outline">Learn More</button>
           </div>
         </div>
         <div class="col-photo">
-          <img src="assets/images/croods-user-interface.png" alt="">
+          <img src="assets/images/croods-user-interface.png">
         </div>
       </div>
     </div>
   </header>
+  <section class="features">
+    <div class="feature-heading">
+      <h2>Better Strategy</h2>
+      <p>
+        Problems trying to resolve the conflict between <br>
+        the two major realms of Classical physics: Newtonian mechanics
+      </p>
+    </div>
+    <div class="container-card">
+      <div class="row-cards">
+        <div class="card">
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <h6>Investment Trading</h6>
+        </div>
+        <div class="card">
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <h6>Support On Raising Funds</h6>
+        </div>
+        <div class="card">
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <h6>Financial Analysis</h6>
+        </div>
+      </div>
+      <div class="row-cards">
+        <div class="card">
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <h6>Taxation Planning</h6>
+        </div>
+        <div class="card">
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt=""></div>
+          <h6>Save money and tim</h6>
+        </div>
+        <div class="card">
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <h6>Outsourced
+            Consulting Business
+          </h6>
+        </div>
+      </div>
+      <div class="cta">
+        <button class="btn btn-round">Get Quote Now</button>
+        <button class="btn btn-round btn-outline">Learn More</button>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
