--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="nav-item"><a href="#" class="btn-text">Login</a></div>
           <div class="nav-item">
             <button class="btn">
-              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg">
+              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg" alt="icons">
             </button>
           </div>
         </div>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-photo">
-          <img src="assets/images/croods-user-interface.png">
+          <img src="assets/images/croods-user-interface.png" alt="vector image of a pregnant woman">
         </div>
       </div>
     </div>
@@ -62,29 +62,29 @@
     <div class="container-card">
       <div class="row-cards">
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
           <h6>Investment Trading</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
           <h6>Support On Raising Funds</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
           <h6>Financial Analysis</h6>
         </div>
       </div>
       <div class="row-cards">
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
           <h6>Taxation Planning</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt=""></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons" alt=""></div>
           <h6>Save money and tim</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
           <h6>Outsourced
             Consulting Business
           </h6>
