fix: fix lint errors

--- a/index.html
+++ b/index.html
@@ -62,29 +62,29 @@
     <div class="container-card">
       <div class="row-cards">
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-1"></div>
           <h6>Investment Trading</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-2"></div>
           <h6>Support On Raising Funds</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-3"></div>
           <h6>Financial Analysis</h6>
         </div>
       </div>
       <div class="row-cards">
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-4"></div>
           <h6>Taxation Planning</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons" alt=""></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-5" alt=""></div>
           <h6>Save money and tim</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icons"></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-6"></div>
           <h6>Outsourced
             Consulting Business
           </h6>
