fix: fix lint errors

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h6>Taxation Planning</h6>
         </div>
         <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-5" alt=""></div>
+          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-5"></div>
           <h6>Save money and tim</h6>
         </div>
         <div class="card">
