--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           <div class="nav-item"><a href="#" class="btn-text">Login</a></div>
           <div class="nav-item">
             <button class="btn">
-              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg" alt="icons">
+              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg"
+                alt="icons">
             </button>
           </div>
         </div>
@@ -93,6 +94,39 @@
       <div class="cta">
         <button class="btn btn-round">Get Quote Now</button>
         <button class="btn btn-round btn-outline">Learn More</button>
+      </div>
+    </div>
+  </section>
+  <section class="testimonials">
+    <div class="container-testimonials">
+      <div class="testimonials-heading">
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between <br>
+          the two major realms of Classical physics: Newtonian mechanics
+        </p>
+      </div>
+      <div class="user-testimonial">
+        <div class="testimonial-card">
+          <img src="assets/images/circle-box.svg" alt="">
+          <div class="card-content">
+            <p>
+              Slate helps you see how many more days you need <br>
+              to work to reach your financial goal for the month and year
+            </p>
+            <div class="ratings">
+              <img src="assets/images/icn bxs-star.svg" alt="raitng stars">
+              <img src="assets/images/icn bxs-star.svg" alt="rating stars">
+              <img src="assets/images/icn bxs-star.svg" alt="rating stars">
+              <img src="assets/images/icn bxs-star.svg" alt="rating stars">
+              <img src="assets/images/icn bx-star.svg" alt="rating stars">
+            </div>
+            <div class="testimonial-name">
+              <h3>Regina Miles</h3>
+              <h6>Designer</h6>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
