feat: build FAQs  section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+  <!-- HEADER -->
+
   <header class="header">
     <div class="navbar">
       <div class="navbar-brand">
@@ -52,6 +55,9 @@
       </div>
     </div>
   </header>
+
+  <!-- FEATURES -->
+
   <section class="features">
     <div class="feature-heading">
       <h2>Better Strategy</h2>
@@ -97,6 +103,9 @@
       </div>
     </div>
   </section>
+
+  <!-- TESTIMONIALS -->
+
   <section class="testimonials">
     <div class="container-testimonials">
       <div class="testimonials-heading">
@@ -130,6 +139,102 @@
       </div>
     </div>
   </section>
+
+  <!-- FAQs -->
+
+  <section class="faq">
+    <div class="container-faq">
+      <div class="faq-heading">
+        <h2>FAQ</h2>
+        <p>Problems trying to resolve the conflict between <br>
+          the two major realms of Classical physics: Newtonian mechanics </p>
+      </div>
+      <div class="faq-cards">
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing </h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+          <div class="faq-text-content">
+            <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+          </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing </h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over ther <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the quick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-card">
+          <div class="faq-flex-row">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
+            <div class="faq-text-content">
+              <h5>the wuick fox jumps over the <br> lazy dog</h5>
+              <h6>Things on a very small scale <br> behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
