refactor header section

--- a/index.html
+++ b/index.html
@@ -12,228 +12,42 @@
 
   <!-- HEADER -->
 
-  <header class="header">
-    <div class="navbar">
-      <div class="navbar-brand">
+  <div class="header">
+    <nav class="nav-container">
+      <div class="logo">
         <h3>BrandName</h3>
       </div>
-      <!-- <div class="navbar-toggler"></div> -->
-      <div class="navbar-collapse">
-        <div class="navbar-nav">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#product">Product</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#contact">Contact</a></li>
+      <div class="navbar">
+        <div class="nav-links"> 
+            <li class="link"><a href="">Home</a></li>
+            <li class="link"><a href="">Product</a></li>
+            <li class="link"><a href="">Pricing</a></li>
+            <li class="link"><a href="">Contact</a></li>
         </div>
-        <div class="navbar-nav-login">
-          <div class="nav-item"><a href="#" class="btn-text">Login</a></div>
-          <div class="nav-item">
-            <button class="btn">
-              <div class="btn-text">Become a member</div><img src="assets/images/icn arrow-right .icn-xs.svg"
-                alt="icons">
-            </button>
-          </div>
+        <div class="account">
+          <li class="link"><a href="">Login</a></li>
+          <button class="btn"><span class="btn-text">Become a member</span><img src="assets/images/icn arrow-right .icn-xs.svg" alt="right arrow icon"></button>
         </div>
       </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-headline">
-          <h1 id="headline">Financial Assistance With True Purpose</h1>
+    </nav>
+    <div class="header-container">
+      <div class="header-row">
+        <div class="header-text-content">
+          <h1>Financial Assistance With True Purpose</h1>
           <h4>
-            We know how large objects will act,<br>
-            but things on a small scale.
+            We know how large objects will act, but things on a small scale
           </h4>
           <div class="cta">
-            <button class="btn btn-round">Get Quote Now</button>
-            <button class="btn btn-round btn-outline">Learn More</button>
+            <button class="btn btn-round"><span class="btn-text">Get Quote Now</span></button>
+            <button class="btn btn-round btn-outline"><span class="btn-text">Learn More</span></button>
           </div>
         </div>
-        <div class="col-photo">
-          <img src="assets/images/croods-user-interface.png" alt="vector image of a pregnant woman">
+        <div class="image">
+          <img src="assets/images/croods-user-interface.svg" alt="">
         </div>
       </div>
     </div>
-  </header>
-
-  <!-- FEATURES -->
-
-  <section class="features">
-    <div class="feature-heading">
-      <h2>Better Strategy</h2>
-      <p>
-        Problems trying to resolve the conflict between <br>
-        the two major realms of Classical physics: Newtonian mechanics
-      </p>
-    </div>
-    <div class="container-card">
-      <div class="row-cards">
-        <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-1"></div>
-          <h6>Investment Trading</h6>
-        </div>
-        <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-2"></div>
-          <h6>Support On Raising Funds</h6>
-        </div>
-        <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-3"></div>
-          <h6>Financial Analysis</h6>
-        </div>
-      </div>
-      <div class="row-cards">
-        <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-4"></div>
-          <h6>Taxation Planning</h6>
-        </div>
-        <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-5"></div>
-          <h6>Save money and tim</h6>
-        </div>
-        <div class="card">
-          <div class="icn-img"><img src="assets/images/icn resize icn-sm.svg" alt="icon-6"></div>
-          <h6>Outsourced
-            Consulting Business
-          </h6>
-        </div>
-      </div>
-      <div class="cta">
-        <button class="btn btn-round">Get Quote Now</button>
-        <button class="btn btn-round btn-outline">Learn More</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- TESTIMONIALS -->
-
-  <section class="testimonials">
-    <div class="container-testimonials">
-      <div class="testimonials-heading">
-        <h2>What Clients Say</h2>
-        <p>
-          Problems trying to resolve the conflict between <br>
-          the two major realms of Classical physics: Newtonian mechanics
-        </p>
-      </div>
-      <div class="user-testimonial">
-        <div class="testimonial-card">
-          <img src="assets/images/circle-box.svg" alt="">
-          <div class="card-content">
-            <p>
-              Slate helps you see how many more days you need <br>
-              to work to reach your financial goal for the month and year
-            </p>
-            <div class="ratings">
-              <img src="assets/images/icn bxs-star.svg" alt="raitng stars">
-              <img src="assets/images/icn bxs-star.svg" alt="rating stars">
-              <img src="assets/images/icn bxs-star.svg" alt="rating stars">
-              <img src="assets/images/icn bxs-star.svg" alt="rating stars">
-              <img src="assets/images/icn bx-star.svg" alt="rating stars">
-            </div>
-            <div class="testimonial-name">
-              <h3>Regina Miles</h3>
-              <h6>Designer</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- FAQs -->
-
-  <section class="faq">
-    <div class="container-faq">
-      <div class="faq-heading">
-        <h2>FAQ</h2>
-        <p>Problems trying to resolve the conflict between <br>
-          the two major realms of Classical physics: Newtonian mechanics </p>
-      </div>
-      <div class="faq-cards">
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing </h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-          <div class="faq-text-content">
-            <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-          </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing </h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over ther <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the quick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-card">
-          <div class="faq-flex-row">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="angled bracket">
-            <div class="faq-text-content">
-              <h5>the wuick fox jumps over the <br> lazy dog</h5>
-              <h6>Things on a very small scale <br> behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  </div>
 
 </body>
 
