refactor features  section

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
         <h3>BrandName</h3>
       </div>
       <div class="navbar">
-        <div class="nav-links"> 
-            <li class="link"><a href="">Home</a></li>
-            <li class="link"><a href="">Product</a></li>
-            <li class="link"><a href="">Pricing</a></li>
-            <li class="link"><a href="">Contact</a></li>
+        <div class="nav-links">
+          <li class="link"><a href="">Home</a></li>
+          <li class="link"><a href="">Product</a></li>
+          <li class="link"><a href="">Pricing</a></li>
+          <li class="link"><a href="">Contact</a></li>
         </div>
         <div class="account">
           <li class="link"><a href="">Login</a></li>
-          <button class="btn"><span class="btn-text">Become a member</span><img src="assets/images/icn arrow-right .icn-xs.svg" alt="right arrow icon"></button>
+          <button class="btn"><span class="btn-text">Become a member</span><img
+              src="assets/images/icn arrow-right .icn-xs.svg" alt="right arrow icon"></button>
         </div>
       </div>
     </nav>
@@ -45,6 +46,94 @@
         <div class="image">
           <img src="assets/images/croods-user-interface.svg" alt="">
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- FEATURES -->
+
+  <div class="features">
+    <div class="features-container">
+      <div class="features-text-container">
+        <div class="features-text-row">
+          <div class="features-main-content">
+            <h2>Better Strategy</h2>
+            <p>
+              Problems trying to resolve the conflict between <br> the two major realms of Classical physics: Newtonian
+              mechanics
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="features-cards-container">
+        <div class="features-cards-row-1">
+          <div class="features-card">
+            <div class="feature-card-content">
+              <div class="features-card-icon">
+                <img src="assets/images/icn resize icn-sm.svg" alt="">
+              </div>
+              <div class="feature-title">
+                <h6>Investment Trading</h6>
+              </div>
+            </div>
+          </div>
+          <div class="features-card">
+            <div class="feature-card-content">
+              <div class="features-card-icon">
+                <img src="assets/images/icn resize icn-sm.svg" alt="">
+              </div>
+              <div class="feature-title">
+                <h6>Support On Raising Funds</h6>
+              </div>
+            </div>
+          </div>
+          <div class="features-card">
+            <div class="feature-card-content">
+              <div class="features-card-icon">
+                <img src="assets/images/icn resize icn-sm.svg" alt="">
+              </div>
+              <div class="feature-title">
+                <h6>Financial Analysis</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="features-cards-row-2">
+          <div class="features-card">
+            <div class="feature-card-content">
+              <div class="features-card-icon">
+                <img src="assets/images/icn resize icn-sm.svg" alt="">
+              </div>
+              <div class="feature-title">
+                <h6>Taxation Planning</h6>
+              </div>
+            </div>
+          </div>
+          <div class="features-card">
+            <div class="feature-card-content">
+              <div class="features-card-icon">
+                <img src="assets/images/icn resize icn-sm.svg" alt="">
+              </div>
+              <div class="feature-title">
+                <h6>Save money and time</h6>
+              </div>
+            </div>
+          </div>
+          <div class="features-card">
+            <div class="feature-card-content">
+              <div class="features-card-icon">
+                <img src="assets/images/icn resize icn-sm.svg" alt="">
+              </div>
+              <div class="feature-title">
+                <h6>Outsourced Consulting Business</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="cta">
+        <button class="btn btn-round"><span class="btn-text">Get Quote Now</span></button>
+        <button class="btn btn-round btn-outline"><span class="btn-text">Learn More</span></button>
       </div>
     </div>
   </div>
