--- a/index.html
+++ b/index.html
@@ -138,6 +138,38 @@
     </div>
   </div>
 
+  <!-- TESTIMONiaLS -->
+
+  <div class="testimonials">
+    <div class="testimonial-container">
+      <div class="testimonial-text-container">
+        <h2>What Clients Say</h2>
+        <p>Problems trying to resolve the conflict between
+          the two major realms of Classical physics: Newtonian mechanics </p>
+      </div>
+      <div class="testimonial-card">
+        <div class="user-profile">
+          <img src="assets/images/circle-box.svg" alt="">
+        </div>
+        <div class="testimonial-card-content">
+          <p>Slate helps you see how many more days you need
+            to work to reach your financial goal for the month and year.</p>
+            <div class="rating">
+              <img src="assets/images/icn bxs-star.svg" alt="">
+              <img src="assets/images/icn bxs-star.svg" alt="">
+              <img src="assets/images/icn bxs-star.svg" alt="">
+              <img src="assets/images/icn bxs-star.svg" alt="">
+              <img src="assets/images/icn bx-star.svg" alt="">
+            </div>
+            <div class="user-credential">
+              <h3>Regina Miles</h3>
+              <h6>Designer</h6>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </body>
 
 </html>
