refactor faq section

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="testimonial-container">
       <div class="testimonial-text-container">
         <h2>What Clients Say</h2>
-        <p>Problems trying to resolve the conflict between
-          the two major realms of Classical physics: Newtonian mechanics </p>
+        <p>Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian
+          mechanics </p>
       </div>
       <div class="testimonial-card">
         <div class="user-profile">
@@ -154,22 +154,104 @@
         <div class="testimonial-card-content">
           <p>Slate helps you see how many more days you need
             to work to reach your financial goal for the month and year.</p>
-            <div class="rating">
-              <img src="assets/images/icn bxs-star.svg" alt="">
-              <img src="assets/images/icn bxs-star.svg" alt="">
-              <img src="assets/images/icn bxs-star.svg" alt="">
-              <img src="assets/images/icn bxs-star.svg" alt="">
-              <img src="assets/images/icn bx-star.svg" alt="">
-            </div>
-            <div class="user-credential">
-              <h3>Regina Miles</h3>
-              <h6>Designer</h6>
-            </div>
+          <div class="rating">
+            <img src="assets/images/icn bxs-star.svg" alt="">
+            <img src="assets/images/icn bxs-star.svg" alt="">
+            <img src="assets/images/icn bxs-star.svg" alt="">
+            <img src="assets/images/icn bxs-star.svg" alt="">
+            <img src="assets/images/icn bx-star.svg" alt="">
+          </div>
+          <div class="user-credential">
+            <h3>Regina Miles</h3>
+            <h6>Designer</h6>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
+
+  <!-- FAQs -->
+
+  <div class="faqa">
+    <div class="faq-container">
+      <div class="faq-text-container">
+        <h2>FAQ</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics
+        </p>
+      </div>
+      <div class="faq-card-container">
+        <div class="faq-cards-row">
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-cards-row">
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-cards-row">
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+
 </body>
 
 </html>
