--- a/index.html
+++ b/index.html
@@ -251,6 +251,125 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- PRICING -->
+
+  <div class="pricing">
+    <div class="pricing-container">
+      <div class="pricing-text-container">
+        <h2>Pricing</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics
+        </p>
+      </div>
+      <div class="pricing-cards-container">
+        <div class="pricing-card">
+          <h3>FREE</h3>
+          <h5>Organize across all apps by hand</h5>
+          <div class="price">
+            <h2>0</h2>
+            <div class="billing">
+              <h3>&dollar;</h3>
+              <h5>Per Month</h5>
+            </div>
+          </div>
+          <div class="features-list">
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
+              <h6>1GB Cloud storage</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
+              <h6>Email and community support</h6>
+            </div>
+          </div>
+          <button class="btn"><span class="btn-text">Try for free</span></button>
+        </div>
+        <div class="pricing-card standard">
+          <h3>STANDARD</h3>
+          <h5>Organize across all apps by hand</h5>
+          <div class="price">
+            <h2>9.99</h2>
+            <div class="billing">
+              <h3>&dollar;</h3>
+              <h5>Per Month</h5>
+            </div>
+          </div>
+          <div class="features-list">
+            <div class="feature-item item-standard">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6 class="text">Unlimited product updates</h6>
+            </div>
+            <div class="feature-item item-standard">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item item-standard">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item item-standard">
+              <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
+              <h6>1GB Cloud storage</h6>
+            </div>
+            <div class="feature-item item-standard">
+              <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
+              <h6>Email and community support</h6>
+            </div>
+          </div>
+          <button class="btn"><span class="btn-text-standard">Try for free</span></button>
+        </div>
+        <div class="pricing-card">
+          <h3>PREMIUM</h3>
+          <h5>Organize across all apps by hand</h5>
+          <div class="price">
+            <h2>19.99</h2>
+            <div class="billing">
+              <h3>&dollar;</h3>
+              <h5>Per Month</h5>
+            </div>
+          </div>
+          <div class="features-list">
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
+              <h6>Unlimited product updates</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
+              <h6>1GB Cloud storage</h6>
+            </div>
+            <div class="feature-item">
+              <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
+              <h6>Email and community support</h6>
+            </div>
+          </div>
+          <button class="btn"><span class="btn-text">Try for free</span></button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
