fix: lint errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
   <!-- HEADER -->
 
   <div class="header">
@@ -50,6 +49,8 @@
     </div>
   </div>
 
+<main class="main-container">
+
   <!-- FEATURES -->
 
   <div class="features">
@@ -67,9 +68,9 @@
       </div>
       <div class="features-cards-container">
         <div class="features-cards-row-1">
-          <div class="features-card">
-            <div class="feature-card-content">
-              <div class="features-card-icon">
+          <div class="features-card-1">
+            <div class="feature-card-content-1">
+              <div class="features-card-icon-1">
                 <img src="assets/images/icn resize icn-sm.svg" alt="">
               </div>
               <div class="feature-title">
@@ -77,9 +78,9 @@
               </div>
             </div>
           </div>
-          <div class="features-card">
-            <div class="feature-card-content">
-              <div class="features-card-icon">
+          <div class="features-card-2">
+            <div class="feature-card-content-2">
+              <div class="features-card-icon-2">
                 <img src="assets/images/icn resize icn-sm.svg" alt="">
               </div>
               <div class="feature-title">
@@ -87,9 +88,9 @@
               </div>
             </div>
           </div>
-          <div class="features-card">
-            <div class="feature-card-content">
-              <div class="features-card-icon">
+          <div class="features-card-3">
+            <div class="feature-card-content-3">
+              <div class="features-card-icon-3">
                 <img src="assets/images/icn resize icn-sm.svg" alt="">
               </div>
               <div class="feature-title">
@@ -99,9 +100,9 @@
           </div>
         </div>
         <div class="features-cards-row-2">
-          <div class="features-card">
-            <div class="feature-card-content">
-              <div class="features-card-icon">
+          <div class="features-card-4">
+            <div class="feature-card-content-4">
+              <div class="features-card-icon-4">
                 <img src="assets/images/icn resize icn-sm.svg" alt="">
               </div>
               <div class="feature-title">
@@ -109,9 +110,9 @@
               </div>
             </div>
           </div>
-          <div class="features-card">
-            <div class="feature-card-content">
-              <div class="features-card-icon">
+          <div class="features-card-5">
+            <div class="feature-card-content-5">
+              <div class="features-card-icon-5">
                 <img src="assets/images/icn resize icn-sm.svg" alt="">
               </div>
               <div class="feature-title">
@@ -119,9 +120,9 @@
               </div>
             </div>
           </div>
-          <div class="features-card">
-            <div class="feature-card-content">
-              <div class="features-card-icon">
+          <div class="features-card-6">
+            <div class="feature-card-content-6">
+              <div class="features-card-icon-6">
                 <img src="assets/images/icn resize icn-sm.svg" alt="">
               </div>
               <div class="feature-title">
@@ -367,6 +368,76 @@
           </div>
           <button class="btn"><span class="btn-text">Try for free</span></button>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- CONTACT -->
+
+  <div class="contact">
+    <div class="contact-container">
+    <div class="container-row">
+      <div class="col-1">
+        <h2>Get In Touch</h2>
+        <p>The gradual accumulation of information about atomic and 
+          small-scale behaviour during the first quarter of the 20th </p>
+      </div>
+      <div class="col-2">
+        <div class="form-group">
+          <input class="input" type="email" placeholder="Your Email">
+          <button class="btn subscribe"><span class="">Subscribe</span></button>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+  
+</main>
+
+  <!-- FOOTER -->
+
+  <div class="footer-container">
+    <div class="footer">
+      <div class="footer-links">
+        <div class="get-in-touch">
+          <h3>Get In Touch</h3>
+          <p>the quick fox jumps over the lazy dog</p>
+          <div class="social-media">
+            <img src="assets/images/ant-design_facebook-filled.svg" alt="">
+            <img src="assets/images/ant-design_instagram-outlined.svg" alt="">
+            <img src="assets/images/ant-design_twitter-outlined.svg" alt="">
+          </div>
+        </div>
+        <div class="company-info">
+          <h3>Company info</h3>
+          <div class="links">
+            <li class="link">About Us</li>
+            <li class="link">Carrier</li>
+            <li class="link">We are hiring</li>
+            <li class="link">Blog</li>
+          </div>
+        </div>
+        <div class="features">
+          <h3>Features</h3>
+          <div class="links">
+            <li class="link">Business Marketing</li>
+            <li class="link">User Analytic</li>
+            <li class="link">Live Chat</li>
+            <li class="link">Unlimited Support</li>
+          </div>
+        </div>
+        <div class="resources">
+          <h3>Resources</h3>
+          <div class="links">
+            <li class="link">IOS &amp; Android</li>
+            <li class="link">Watch a Demo</li>
+            <li class="link">Customers</li>
+            <li class="link">API</li>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <span>Made With Love By Figmaland All Right Reserved </span>
       </div>
     </div>
   </div>
